retrieved/unpackaged/unpackaged/objects/Book__c.object
<CustomObject>
    <fields>
        <fullName>Author__c</fullName>
        <label>Author</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Book_Id__c</fullName>
        <label>Book Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Books</relationshipLabel>
        <relationshipName>Books</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_of_purchase__c</fullName>
        <label>Date of purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Count__c</fullName>
        <label>Issue Count</label>
        <summaryFilterItems>
            <field>Book_Issue__c.Return_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Book_Issue__c.Book__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <label>Publisher</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Book</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Book_Id__c</columns>
        <columns>NAME</columns>
        <columns>Author__c</columns>
        <columns>Publisher__c</columns>
        <columns>Date_of_purchase__c</columns>
        <columns>Price__c</columns>
        <columns>Category__c</columns>
        <columns>Available__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>